k8s/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.11-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmsg-service
spec:
  selector:
    app: rabbitmq
  type: LoadBalancer # NodePort
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
      # nodePort: 31533

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  clusterIP: None # headless service
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
