k8s/accesshive-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accesshive-ingress
  namespace: production
spec:
  rules:
    - host: accesshive.local.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: accesshive-api-service
                port:
                  number: 80
